file was not updated in runner

--- a/.github/workflows/fantasy_data_trigger.yaml
+++ b/.github/workflows/fantasy_data_trigger.yaml
@@ -21,7 +21,7 @@ jobs:
       - run: pip install -r requirements.txt
 
       - name: Run Fantasy
-        run: python fantasy_runner.py
+        run: python fantasy_runner_projections.py
 
       - name: commit files
         run: |
